# MPS_hang_reproducer

./: README.md  environment
CUF/: CMakeLists.txt
CUF/Source/: collective.cuf  collective.cuf-crap
